# bhbadge-rs

./: .gitignore  Cargo.toml  README.md  decode.py  defmt-print.nix  deploy.sh  flake.nix  serial.py  serial.sh  shell.nix
.cargo/: config.toml
bhboard/: Cargo.toml
bhboard/src/: lib.rs
crates/boards/bhboard-2022/: Cargo.toml
crates/boards/bhboard-2022/src/: lib.rs
crates/boards/bhboard-2023/: Cargo.toml
crates/boards/bhboard-2023/src/: lib.rs
crates/display-interface/: Cargo.toml
crates/display-interface/spi/src/: lib.rs
crates/padme-core/: Cargo.toml
crates/padme-core/src/: bitops.rs  bus.rs  cpu.rs  default.rs  error.rs  interrupt.rs  joypad.rs  lib.rs  ram.rs  region.rs  serial.rs  system.rs  timer.rs
crates/padme-core/src/apu/: apu.rs  channel1.rs  channel2.rs  channel3.rs  channel4.rs  mod.rs  modulation.rs
crates/padme-core/src/collections/: queue.rs
crates/padme-core/src/ppu/: mod.rs  pipeline.rs  pixel.rs  ppu.rs  sprite.rs
crates/padme-core/src/rom/: mbc.rs  mod.rs  rom.rs
crates/padme-core/tests/: cpu-instrs.rs
crates/st7735-rs/: Cargo.toml
crates/st7735-rs/examples/: fill_screen.rs  shapes_and_text.rs
crates/st7735-rs/src/: command.rs
crates/st7735-rs/src/fonts/: mod.rs
examples/: blinky.rs  gameboy.rs  nfc.rs  square.rs
examples/2022/: gameboy.rs  square.rs
examples/2023/: blinky.rs  nfc.rs
padme-core/: Cargo.toml
pytest/: code.py  test.py
src/: color.rs  display.rs  gameboy.rs  lib.rs  main.rs  nfc.rs  spinlocks.rs  usb_serial.rs  usb_serial_defmt.rs
src/y2022/: display.rs  mod.rs
st7735-rs/: Cargo.toml
st7735-rs/src/: color.rs  command.rs  lib.rs
st7735-rs/src/fonts/: font57.rs  mod.rs
