[package]
edition = "2021"
name = "bhbadge"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12"
bhboard = { path = "bhboard" }
display-interface = { path = "display-interface" }
display-interface-spi = { path = "display-interface/spi" }
st7735 = { path = "st7735-rs" }
inverted-pin = "0.2.0"
defmt = "0.3.2"
num-traits = { version = "0.2.15", default-features = false }
rp2040-hal = "0.5.0"
padme-core = { path = "padme-core" }
usbd-serial = "0.1.1"
usb-device = "0.2.9"
critical-section = "0.2.7"

# Make rust-analyzer
[[bin]]
name = "app"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
strip = true

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
display-interface = { version = "0.4", path = "display-interface" }
