[package]
edition = "2021"
name = "bhbadge"
version = "0.1.0"

[workspace]
members = [
  "crates/*",
]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12"
inverted-pin = "0.2.0"
defmt = "0.3.2"
num-traits = { version = "0.2.15", default-features = false }
rp2040-hal = "0.5.0"
usbd-serial = "0.1.1"
usb-device = "0.2.9"
display-interface = "0.4.0"
display-interface-spi = "0.4.0"
critical-section = "0.2.7"

bhboard = { path = "crates/bhboard" }
padme-core = { path = "crates/padme-core" }
st7735 = { path = "crates/st7735-rs" }

[[example]]
name = "gameboy"
path = "examples/gameboy.rs"

[[example]]
name = "square"
path = "examples/square.rs"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
strip = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
display-interface = { path = "crates/display-interface" }
display-interface-spi = { path = "crates/display-interface/spi" }
