[package]
name = "st7735"
description = "Rust library for displays using the ST7735 driver"
version = "0.1.0"
authors = ["Anna Scholtz <anna@scholtzan.net>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/scholtzan/st7735-rs"
readme = "README.md"
documentation = "https://docs.rs/st7735"

[dependencies]
embedded-hal = "0.2.7"
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.2", default-features = false }
num = { version = "0.2", default-features = false }
display-interface = "0.4.0"
