[package]
name = "bhboard_2023"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
rp2040-boot2 = { version = "0.2.1", optional = true }
rp2040-hal = "0.5.0"
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.1"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
usbd-hid = "0.5.2"
futures = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
embedded-hal = "0.2.7"
cortex-m-rtic = "1.1.4"
nb = "1.1"
i2c-pio = "0.3.0"
heapless = "0.7.16"
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git" }
smart-leds = "0.3.0"
ws2812-pio = "0.3.0"
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
hd44780-driver = "0.4.0"
pio = "0.2.1"
pio-proc = "0.2.2"

defmt = "0.3.5"
defmt-rtt = "0.3.2"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt", "rp2040-hal/rt"]
